# pratical

pratical2/TP2/: CMakeLists.txt
pratical2/TP2/src/exo1/: nuage.cpp  nuage.hpp
pratical2/TP2/test/exo1/: TP2_exo1_test.cpp  test_nuage.inl
pratical2/TP2/test/exo2/: TP2_exo2_test.cpp  test_Factorielle.inl  test_Taylor.inl
pratical3/TP3/: CMakeLists.txt
pratical3/TP3/src/: echantillon.cpp  echantillon.hpp  valeur.cpp  valeur.hpp
pratical3/TP3/test/: test_Echantillon.inl  test_Histogramme.inl
pratical3/TP3/tp_3/: CMakeLists.txt
